--- a/projects/1_project/index.html
+++ b/projects/1_project/index.html
@@ -140,7 +140,7 @@
   </header>
 
   <article>
-    <h3 id="commuting-patterns-from-cell-phone-data">commuting patterns from cell phone data</h3>
+    <h3 id="mobility-patterns-from-cell-phone-data">mobility patterns from cell phone data</h3>
 
 <p>In cooperation with <a href="http://anet.krtk.mta.hu">ANET</a> and <a href="https://www.uni-corvinus.hu/main-page/research/corvinus-institute-for-advanced-studies/research-centres/laboratory-for-networks-technology-innovation-neti-lab/?lang=en">NETI Lab</a> I work with large scale cell phone datasets to understand how commuting patterns vary across firms, industries and regions.
 Technical report coming soon.</p>
@@ -165,9 +165,9 @@ Technical report coming soon.</p>
 
 <p><br /></p>
 
-<h3 id="mobility-in-cities-through-twitter-data">mobility in cities through twitter data</h3>
+<h3 id="commuting-in-cities-through-twitter-data">commuting in cities through twitter data</h3>
 
-<p>In multiple collaborative project we use geolocated Twitter messages to track the mobility of thousands of users in US cities. We combine information on individual commuting with socio-economic and social network data to understand how mobility shapes social relationships of people from different communities. Working papers coming soon.</p>
+<p>In multiple collaborative projects we use geolocated Twitter messages to track the mobility of thousands of users in US cities. We combine information on individual commuting with socio-economic and social network data to understand how mobility shapes social relationships of people from different communities. Working papers coming soon.</p>
 
 <div class="row">
     <div class="col-sm mt-3 mt-md-0">
