--- a/projects/3_project/index.html
+++ b/projects/3_project/index.html
@@ -171,7 +171,7 @@
 
 <h3 id="co-inventor-networks">co-inventor networks</h3>
 
-<p>As a collaborative project with ANET Lab members Gergő Tóth, Zoltán Elekes and Balázs Lengyel, we search for the driving forces behind persistent inter-regional co-inventor ties across the European Union. The publication in European Planning Studies is available <a href="https://www.tandfonline.com/doi/full/10.1080/09654313.2021.1914555">here</a>.</p>
+<p>As a collaborative project with ANET Lab members Gergő Tóth, Zoltán Elekes and Balázs Lengyel, we search for the driving forces behind persistent inter-regional co-inventor ties across the European Union. Publication in European Planning Studies is available <a href="https://www.tandfonline.com/doi/full/10.1080/09654313.2021.1914555">here</a>.</p>
 
 <div class="row">
     <div class="col-sm mt-3 mt-md-0">
