--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <th scope="row">Mar 18, 2023</th>
           <td>
             
-              <a href="https://www.csh.ac.at/meet-the-data-magician/">Interview</a> by CSH Vienna about my MSCA PF project
+              <a href="https://journals.sagepub.com/doi/10.1177/23998083221120663">New paper</a> published in Environment and Planning B
 
             
           </td>
